fix height relating to horizontal scrollbar

--- a/src/app/components/App.scss
+++ b/src/app/components/App.scss
@@ -1,13 +1,18 @@
 @import "../variables.scss";
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
+  height: 100%;
   // background: $bg-blue;
   font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
 }
 
 #app {
-  height: 100vh;
+  height: 100%;
   display: inline-flex;
   flex-direction: column;
 }
